# Project_Humanoid

./: CMakeLists.txt  README.md  log_error.txt
include/movement/: bangun.h  berdiri.h  core_movement.h  foot_ik.h  move.h  moveArray.h  putarkanan.h
lib/include/movement/: foot_ik.h
lib/src/camera/: Camera.cpp
lib/src/movement/: Makefile  berdiri.cpp  foot_ik.cpp  putarkanan.cpp  putarkiri.cpp  xxx
src/: CMakeLists.txt  cobaduduk.cpp  core.cpp  test_diri.cpp
src/movement/: CMakeLists.txt  berdiri.cpp  foot_ik.cpp  langkah_sk2.cpp  langkah_sk2_pid.cpp  putarkanan.cpp  putarkiri.cpp
systemTest/: putarkanan.cpp  putarkiri.cpp
